--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ mysql:
     config: 'charset=utf8&parseTime=True&loc=Local'
     max-idle-conns: 10
     max-open-conns: 10
-    log-mode: false
+    log-mode: true
 
 # oss configuration
 qiniu:
@@ -35,7 +35,7 @@ redis:
 system:
     use-multipoint: false
     env: 'public'  # Change to "develop" to skip authentication for development mode
-    addr: 8888
+    addr: 9090
     db-type: "mysql"
 
 # captcha configuration
